--- a/BuildMyUnicorn/Web.config
+++ b/BuildMyUnicorn/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ConnectionBuildMyUnicorn" connectionString="data source=DESKTOP-EQ5UJQI;initial catalog=db_buildmyunicorn;Persist Security Info=True;User ID=sa;Password=Aspl@123" providerName="System.Data.SqlClient" />
+    <add name="ConnectionBuildMyUnicorn" connectionString="data source=.;initial catalog=db_buildmyunicorn;Persist Security Info=True;User ID=sa;Password=SQL@123" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
