--- a/.gitignore
+++ b/.gitignore
@@ -360,3 +360,10 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+.vs/BuildMyUnicorn/v15/Server/sqlite3/storage.ide-wal
+.vs/BuildMyUnicorn/v15/.suo
+.vs/BuildMyUnicorn/v15/Server/sqlite3/db.lock
+.vs/BuildMyUnicorn/v15/Server/sqlite3/storage.ide
+.vs/BuildMyUnicorn/v15/Server/sqlite3/storage.ide-shm
+*.ide-shm
+*.ide-wal
